--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,7 @@ name = "CpuWormhole"
 uuid = "a306ffa6-8c32-4d43-9524-335a00654d54"
 authors = ["kaarel <sutnucket@mail.com>"]
 version = "0.1.0"
+
+[deps]
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
